--- a/res/layout/molemash_lauout.xml
+++ b/res/layout/molemash_lauout.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="match_parent" android:layout_height="match_parent" >
     
-    <com.trf.molemash.MolemashView 
+        <com.trf.molemash.MolemashView 
         android:id="@+id/molemash"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -11,14 +10,14 @@
         android:id="@+id/background" 
         android:layout_width="match_parent" 
         android:layout_height="match_parent" />
-        <TextView 
-        android:id="@+id/text"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="24sp"
-        android:textColor="@color/text_violet"
-        android:visibility="visible" />
+    <TextView 
+	    android:id="@+id/text"
+	    android:layout_gravity="center"
+	    android:gravity="center"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:textSize="24sp"
+	    android:textColor="@color/text_violet"
+	    android:visibility="visible" />
 
 </merge>
