时间设置为 60个线程时间结束

--- a/res/layout/molemash_layout.xml
+++ b/res/layout/molemash_layout.xml
@@ -7,6 +7,12 @@
         android:id="@+id/background" 
         android:layout_width="match_parent" 
         android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:textIsSelectable="false" />
     <com.trf.molemash.MolemashView 
         android:id="@+id/molemash"
         android:layout_width="match_parent"
